## Copyright (C) 2006-2011  Trevor Woerner

########################
## src/Makefile.am
########################
SUBDIRS =
EXTRA_DIST = getgcov.sh
AM_CFLAGS = -Wall -Werror -Wextra -Wconversion -Wreturn-type -Wstrict-prototypes
dist_data_DATA = CheckLog.xsl gcov2html-check.png

bin_PROGRAMS = gcov2html-check
bin_SCRIPTS = getgcov.sh
